# nand2tetris-rs

./: Cargo.toml  README.md
assembler/: Cargo.toml
assembler/src/: code.rs  lib.rs  main.rs  parser.rs  symbol_table.rs  util.rs
assembler/src/programs/: Max.asm  Prog.asm  Rect.asm  SimpleAdd.asm  max.txt  test.txt
assembler/src/tests/parser/: 1.asm  no_symbol.asm
display/: index.html  index.ts  package-lock.json  package.json  tsconfig.json
hardware/: Cargo.toml
hardware/src/: base.rs  computer.rs  lib.rs  main.rs  screen.rs  util.rs
hardware/src/base/: alu.rs  arithmetic.rs  computer.rs  cpu.rs  dff.rs  keyboard.rs  logic.rs  pc.rs  ram.rs  register.rs  rom.rs  screen.rs
hardware/src/program/: max2.txt  max_memo.txt  rect.txt  rect_from_assembler.txt  rect_memo.txt
hardware/src/ws_server/: server.rs
integrate/: Cargo.toml
integrate/src/: main.rs
integrate/src/programs/: Eq.asm  Eq.txt  Eq.vm  Gt.asm  Gt.txt  Gt.vm  Lt.asm  Lt.txt  Lt.vm  StackTest.asm  StackTest.txt  Sub.asm  Sub.txt  Sub.vm
src/: alu.rs  arithmetic.rs  computer.rs  cpu.rs  dff.rs  logic.rs  main.rs  pc.rs  ram.rs  register.rs  sequential.rs
src/tests/: sample.txt
vm-translator/: Cargo.toml
vm-translator/src/: code_writer.rs  lib.rs  main.rs  parser.rs  vm_translator.rs
vm-translator/src/tests/: SimpleAdd.vm  vm_list.vm
