[package]
name = "integrate"
version = "0.1.0"
authors = ["cola119 <k.cola119@ezweb.ne.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.11.1"

vm-translator = {path = "../vm-translator"}
assembler = {path = "../assembler"}
hardware = {path = "../hardware"}